# spark_tensorflow_pipeline

./: .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  cpu.Dockerfile  gpu.Dockerfile  pyproject.toml  setup.cfg
.travis/: travis-ci_service_account.json.enc
config/: config.toml
docs/: Project_Description_and_Work_Plan.md  Updated Project Description and Work Plan.docx  project_description_and_work_plan.docx  project_description_and_work_plan.md  ~$oject_description_and_work_plan.docx
docs/helpers/: kube_debug.md
kubernetes/: tensorflow_cluster_role_binding.yaml  tensorflow_namespace.yaml  tensorflow_service_account.yaml
scripts/: create_cluster.sh  create_tensorflow_cluster.sh  delete_cluster.sh  init_environment.sh  serve_topic_modelling.sh
src/distributed_nlp_emails/download/: download_enron_dataset.py  download_spacy_model.py  gcp_download.py  get_enron_dataset.py  get_spacy_model.py
src/distributed_nlp_emails/helpers/anonymization/: text_anonymizer.py
src/distributed_nlp_emails/helpers/config/: get_config.py
src/distributed_nlp_emails/helpers/globals/: directories.py
src/distributed_nlp_emails/helpers/input/: input_eml.py  input_parquet.py
src/distributed_nlp_emails/helpers/output/: output_eml.py  output_parquet.py
src/distributed_nlp_emails/helpers/validation/: address_validation.py  text_validation.py
src/distributed_nlp_emails/job/: eml_pipeline.py  topic_modelling_evaluation.py  topic_modelling_processing.py
src/distributed_nlp_emails/job/test/: test_spark.py
src/distributed_nlp_emails/parsing/: message_body_extraction.py  message_contents_extraction.py  message_header_extraction.py
src/distributed_nlp_emails/tasks/: extract_message_contents.py  message_body_extraction.py  message_header_extraction.py
src/distributed_nlp_emails/tensorflow/topic_modelling/: train_model.py
src/distributed_nlp_emails/upload/: gcp_upload.py
src/nlp_emails/download/: get_enron_dataset.py
src/nlp_emails/helpers/: directories.py
src/nlp_emails/helpers/anonymization/: text_anonymizer.py
src/nlp_emails/helpers/config/: get_config.py
src/nlp_emails/helpers/globals/: config.py  directories.py  regex.py
src/nlp_emails/helpers/input/: input_eml.py  input_parquet.py
src/nlp_emails/helpers/output/: convert_to_eml.py  convert_to_parquet.py  output_eml.py  output_parquet.py
src/nlp_emails/helpers/validation/: address_validation.py  text_validation.py
src/nlp_emails/job/: enron_pipeline.py
src/nlp_emails/tasks/: extract_message_contents.py  message_body_extraction.py  message_header_extraction.py  parse_email_messages.py
src/spark_tensorflow_pipeline/download/: download_spacy_model.py  gcp_download.py
src/spark_tensorflow_pipeline/helpers/config/: get_config.py
src/spark_tensorflow_pipeline/helpers/globals/: directories.py  regex.py
src/spark_tensorflow_pipeline/helpers/validation/: address_validation.py  text_validation.py
src/spark_tensorflow_pipeline/jobs/: utils.py
src/spark_tensorflow_pipeline/jobs/action_identification/: action_identification_evaluation.py
src/spark_tensorflow_pipeline/jobs/intent_identification/: intent_identification_model.py
src/spark_tensorflow_pipeline/jobs/summarization/: fake_news_loader.py  glove_loader.py  plot_utils.py  seq2seq.py  summarization_config.py  summarization_evaluation.py  summarization_model.py  summarization_serving.py
src/spark_tensorflow_pipeline/processing/: vectorize_emails.py
src/spark_tensorflow_pipeline/serving/: api.py  message_body_extraction.py  message_contents_extraction.py  message_header_extraction.py
src/spark_tensorflow_pipeline/upload/: gcp_upload.py
tests/data/emails/: README.md  sources.txt
tests/data/emails/error_emails/: bad_date_header.eml  (+14 more)
tests/data/parquet/: test.parquet.snappy
tests/distributed_nlp_emails/parsing/: message_body_extraction_test.py  message_contents_extraction_test.py  message_header_extraction_test.py
tests/distributed_nlp_emails/tasks/: extract_message_contents_test.py  message_body_extraction_test.py  message_header_extraction_test.py
tests/nlp_emails/helpers/: address_validation_test.py  text_validation_test.py
tests/nlp_emails/tasks/: extract_message_contents_test.py  message_body_extraction_test.py  message_header_extraction_test.py  parse_email_messages_test.py
tests/spark_tensorflow_pipeline_tests/: todo_test.py
(+75 files in other folders)
