[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "distributed_nlp_emails"
version = "0.0.1"
description = """
Applying Natural Language Processing (NLP) techniques to detect topics, summarize, and identify actionable emails in a
distributed fashion using Spark and TensorFlow
"""
authors = ["Cathal Mullan <cmullan@proofpoint.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.*"
tqdm = "^4.36"
requests = "^2.22"
validators = "^0.14.0"
talon = "^1.4"
bs4 = "^0.0.1"
faker = "^2.0"
spacy = "^2.2"
pyarrow = "^0.15.0"
pandas = "^0.25.2"
pyspark = "^2.4"
numpy = "^1.17"
python-dotenv = "^0.10.3"
tensorflow = "2.1.0"
tensorflow-probability = "0.9"
google-cloud-storage = "^1.24.1"

[tool.poetry.dev-dependencies]
pre-commit = "1.18.2"
pytest = "5.1.0"
pytest-cov = "2.7.1"
natsort = "^6.2"

[tool.poetry.scripts]
download_enron_dataset = "distributed_nlp_emails.download.download_enron_dataset:main"
download_spacy_model = "distributed_nlp_emails.download.download_spacy_model:main"
eml_pipeline = "distributed_nlp_emails.job.eml_pipeline:main"
topic_modelling_evaluation = "distributed_nlp_emails.job.topic_modelling_evaluation:main"
topic_modelling_processing = "distributed_nlp_emails.job.topic_modelling_processing:main"

[tool.black]
line-length = 120
target_version = ['py37']

[tool.isort]
line_length = 120
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
known_third_party = ["bs4", "dotenv", "faker", "natsort", "numpy", "pandas", "pyarrow", "pyspark", "pytest", "requests", "scipy", "sklearn", "spacy", "talon", "tensorflow", "tensorflow_probability", "tqdm", "validators"]
