[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "spark_tensorflow_pipeline"
version = "0.0.1"
description = """
Spark pipeline to run TensorFlow machine learning code using Horovod.
"""
authors = [
    "Cathal Mullan <cmullan@proofpoint.com>"
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.*"
pyspark = "^2.4"
numpy = "^1.17"
python-dotenv = "^0.10.3"
tensorflow = "2.1.0"
tensorflow-probability = "0.9"
google-cloud-storage = "^1.24.1"
click = "^7.0"
google-auth = "^1.10.1"
setuptools = "^45.1.0"
horovod = "^0.19.0"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "1.18.2"
pytest = "5.1.0"
pytest-cov = "2.7.1"
pyspark-stubs = "^2.4"

[tool.poetry.scripts]
# TensorFlow
topic_modelling_train = "spark_tensorflow_pipeline.job.topic_modelling.train_model:main"

# Google Cloud
gcp_upload = "spark_tensorflow_pipeline.upload.gcp_upload:main"
gcp_download = "spark_tensorflow_pipeline.download.gcp_download:main"

[tool.black]
line-length = 120
target_version = ['py37']

[tool.isort]
line_length = 120
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
known_third_party = ["click", "dotenv", "google", "horovod", "numpy", "scipy", "tensorflow", "tensorflow_probability"]
