[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "spark_tensorflow_pipeline"
version = "0.0.1"
description = """
Spark pipeline to run TensorFlow machine learning code using Horovod.
"""
authors = [
    "Cathal Mullan <cmullan@proofpoint.com>"
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.1, <3.7"
numpy = "^1.17"
python-dotenv = "^0.10.3"
tensorflow = "2.1.0"
tensorflow-probability = "0.9"
tensorflow-estimator = "2.1.0"
setuptools = "^45.1.0"
spacy = "^2.2.4"
scikit-learn = "^0.22.2"
gcsfs = "^0.6.1"
pandas = "^1.0.3"
horovod = "^0.19.1"
pyarrow = "^0.16.0"
dataclasses = "^0.7"

[tool.poetry.dev-dependencies]
pre-commit = "1.18.2"
pytest = "5.1.0"
pytest-cov = "2.7.1"

[tool.poetry.scripts]
download_spacy_model = "spark_tensorflow_pipeline.download.download_spacy_model:main"
download_vocabularly = "spark_tensorflow_pipeline.download.download_vocabularly:main"

[tool.black]
line-length = 120
target_version = ['py36']

[tool.isort]
line_length = 120
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
known_third_party = ["dotenv", "gcsfs", "horovod", "numpy", "scipy", "sklearn", "spacy", "tensorflow", "tensorflow_probability"]
